--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "lerna run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy": "npm run build-storybook && gh-pages -d storybook-static"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
     "babel-loader": "^8.2.2",
+    "gh-pages": "^3.1.0",
     "lerna": "^4.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
