--- a/packages/base-builder/package.json
+++ b/packages/base-builder/package.json
@@ -22,13 +22,14 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "rollup": "^2.45.2"
+    "postcss": "^8.2.10",
+    "rollup": "^2.45.2",
+    "rollup-plugin-postcss": "^4.0.0"
   }
 }
