--- a/packages/base-text/package.json
+++ b/packages/base-text/package.json
@@ -21,14 +21,8 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
     "@rupertong/base-builder": "^0.0.0",
-    "react": "16.x",
-    "rollup": "^2.45.2"
+    "react": "16.x"
   },
   "peerDependencies": {
     "react": "16.x"
