--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -25,12 +25,6 @@
     "@rupertong/base-text": "^0.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rupertong/base-builder": "^0.0.0",
-    "rollup": "^2.45.2"
+    "@rupertong/base-builder": "^0.0.0"
   }
 }
