build: map compiled files in package.json

--- a/packages/base-text/package.json
+++ b/packages/base-text/package.json
@@ -5,13 +5,16 @@
   "keywords": [],
   "author": "rupert-ong <rupert.ong@gmail.com>",
   "license": "ISC",
-  "main": "lib/base-text.js",
+  "main": "dist/base-text.cjs.js",
+  "module": "dist/base-text.esm.js",
+  "src": "lib/base-text.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
