--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-loader": "^8.2.2",
     "gh-pages": "^3.1.0",
     "lerna": "^4.0.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react": "16.x",
+    "react-dom": "16.x"
   },
   "dependencies": {}
 }
