--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "base",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "deploy": "npm run build-storybook && gh-pages -d storybook-static",
-    "publish": "lerna publish"
+    "publish": "lerna publish from-package"
   },
   "keywords": [],
   "author": "",
