--- a/packages/base-button/package.json
+++ b/packages/base-button/package.json
@@ -17,6 +17,7 @@
     "dist"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
