--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "deploy": "npm run build-storybook && gh-pages -d storybook-static",
-    "publish": "lerna publish from-package"
+    "publish": "lerna publish"
   },
   "keywords": [],
   "author": "",
