--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
+    "@types/react": "^16.14.5",
     "babel-loader": "^8.2.2",
     "gh-pages": "^3.1.0",
     "lerna": "^4.0.0",
     "react": "16.x",
-    "react-dom": "16.x"
+    "react-dom": "16.x",
+    "typescript": "^4.2.4"
   },
   "dependencies": {}
 }
