--- a/packages/base-text/package.json
+++ b/packages/base-text/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "dist/base-text.cjs.js",
   "module": "dist/base-text.esm.js",
-  "src": "lib/base-text.js",
+  "src": "lib/base-text.tsx",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
