--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "dist/base.cjs.js",
   "module": "dist/base.esm.js",
-  "src": "lib/base.js",
+  "src": "lib/base.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
