--- a/packages/base-call-to-action/package.json
+++ b/packages/base-call-to-action/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "dist/base-call-to-action.cjs.js",
   "module": "dist/base-call-to-action.esm.js",
-  "src": "lib/base-call-to-action.js",
+  "src": "lib/base-call-to-action.tsx",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
