--- a/packages/base-call-to-action/package.json
+++ b/packages/base-call-to-action/package.json
@@ -8,6 +8,7 @@
   "main": "dist/base-call-to-action.cjs.js",
   "module": "dist/base-call-to-action.esm.js",
   "src": "lib/base-call-to-action.tsx",
+  "types": "dist/types/base-call-to-action/lib/base-call-to-action.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,8 +18,7 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "scripts": {
     "build": "base-builder",
