--- a/packages/base-text/package.json
+++ b/packages/base-text/package.json
@@ -8,6 +8,7 @@
   "main": "dist/base-text.cjs.js",
   "module": "dist/base-text.esm.js",
   "src": "lib/base-text.tsx",
+  "types": "dist/types/base-text/lib/base-text.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,8 +18,7 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "scripts": {
     "build": "base-builder",
