--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -8,6 +8,8 @@
   "main": "dist/base.cjs.js",
   "module": "dist/base.esm.js",
   "src": "lib/base.ts",
+  "types": "dist/types/base/lib/base.d.ts",
+  "sideEffects": ["*.css"],
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -17,8 +19,7 @@
     "dist"
   ],
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "scripts": {
     "build": "base-builder",
