--- a/packages/base-builder/package.json
+++ b/packages/base-builder/package.json
@@ -31,9 +31,9 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "core-js": "^3.11.0",
+    "fs-extra": "^9.1.0",
     "postcss": "^8.2.10",
     "rollup": "^2.45.2",
-    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
