--- a/packages/base-builder/package.json
+++ b/packages/base-builder/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@rollup/plugin-babel": "^5.3.0",
@@ -36,6 +37,7 @@
     "rollup": "^2.45.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-rename-node-modules": "^1.1.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
