--- a/packages/base-text/package.json
+++ b/packages/base-text/package.json
@@ -6,7 +6,7 @@
   "author": "rupert-ong <rupert.ong@gmail.com>",
   "license": "ISC",
   "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "module": "dist/esm/index.js",
   "src": "lib/index.tsx",
   "types": "dist/types/index.d.ts",
   "directories": {
