--- a/packages/base-call-to-action/package.json
+++ b/packages/base-call-to-action/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rupertong/base-call-to-action",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "rupert-ong <rupert.ong@gmail.com>",
@@ -29,14 +29,15 @@
   },
   "homepage": "https://github.com/rupert-ong/monorepo-components#readme",
   "dependencies": {
-    "@rupertong/base-button": "^1.1.1",
-    "@rupertong/base-text": "^1.0.1"
+    "@rupertong/base-button": "^1.1.2",
+    "@rupertong/base-text": "^1.0.2"
   },
   "devDependencies": {
-    "@rupertong/base-builder": "^1.0.1",
+    "@rupertong/base-builder": "^1.0.2",
     "react": "16.x"
   },
   "peerDependencies": {
     "react": "16.x"
-  }
+  },
+  "gitHead": "3bb9f205c85237bd401b2779599db46ad4df7b93"
 }
