--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rupertong/base-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "> TODO: description",
   "author": "rupert-ong <rupert.ong@gmail.com>",
   "homepage": "https://github.com/rupert-ong/monorepo-components#readme",
@@ -35,10 +35,11 @@
     "url": "https://github.com/rupert-ong/monorepo-components/issues"
   },
   "devDependencies": {
-    "@rupertong/base-builder": "^1.0.1",
+    "@rupertong/base-builder": "^1.0.2",
     "react": "16.x"
   },
   "peerDependencies": {
     "react": "16.x"
-  }
+  },
+  "gitHead": "3bb9f205c85237bd401b2779599db46ad4df7b93"
 }
