--- a/packages/base-utils/package.json
+++ b/packages/base-utils/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "main": "dist/index.cjs.js",
   "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "src": "lib/index.ts",
   "directories": {
     "lib": "lib",
