--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "lerna run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:init": "npm run build && npm run test",
+    "test": "jest --coverage",
+    "test:init-watch": "npm run build && npm run test:watch",
+    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint --fix \"./packages/**/*.{js,jsx,ts,tsx,json}\"",
@@ -23,6 +26,9 @@
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/react": "^6.2.8",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@types/jest": "^26.0.23",
     "@types/react": "^16.14.5",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -30,15 +36,20 @@
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jest-dom": "^3.8.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "lerna": "^4.0.0",
     "prettier": "^2.2.1",
     "react": "16.x",
     "react-dom": "16.x",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
   },
   "dependencies": {}
