--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "base",
   "version": "1.0.0",
-  "description": "",
+  "description": "Monorepo for base library. Used for testing and experimentation.",
   "main": "index.js",
   "scripts": {
     "build": "lerna run build",
