--- a/packages/base-builder/package.json
+++ b/packages/base-builder/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@svgr/rollup": "^5.5.0",
     "core-js": "^3.11.0",
     "fs-extra": "^9.1.0",
     "postcss": "^8.2.10",
