chore(core): exclude config files from lerna publish

--- a/lerna.json
+++ b/lerna.json
@@ -10,6 +10,7 @@
         "**/*.md",
         "**/docs/*",
         "**/*.stories.*",
+        "**/*.config.*",
         "**/*.test.*",
         "**/*.spec.*"
       ],
