--- a/packages/base-demo-prerelease/package.json
+++ b/packages/base-demo-prerelease/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rupertong/base-template",
+  "name": "@rupertong/base-demo-prerelease",
   "version": "0.0.0",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
@@ -23,7 +23,7 @@
     "build": "base-builder"
   },
   "devDependencies": {
-    "@rupertong/base-builder": "^1.1.2",
+    "@rupertong/base-builder": "1.x",
     "react": "16.x"
   },
   "peerDependencies": {
