build(core): remove push from lerna version

--- a/lerna.json
+++ b/lerna.json
@@ -14,11 +14,12 @@
         "**/*.test.*",
         "**/*.spec.*"
       ],
+      "message": "chore(release): publish",
       "registry": "https://registry.npmjs.org"
     },
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): publish"
+      "push": false
     }
   },
   "bootstrap": {
