chore(core): change lerna publish and version message, enable push on version

--- a/lerna.json
+++ b/lerna.json
@@ -14,12 +14,12 @@
         "**/*.test.*",
         "**/*.spec.*"
       ],
-      "message": "chore(release): publish",
+      "message": "chore(release): publish %s",
       "registry": "https://registry.npmjs.org"
     },
     "version": {
       "conventionalCommits": true,
-      "push": false
+      "message": "chore(version): bump to %s"
     }
   },
   "bootstrap": {
