chore: remove version # syntax from lerna.json

--- a/lerna.json
+++ b/lerna.json
@@ -18,7 +18,7 @@
     },
     "version": {
       "conventionalCommits": true,
-      "message": "chore(release): publish %s"
+      "message": "chore(release): publish"
     }
   },
   "bootstrap": {
