--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "lerna bootstrap --hoist",
     "prepublish": "npm run init",
     "publish": "lerna publish",
+    "postpublish": "lerna publish from-package",
     "publish:ci": "npm run publish -- --yes",
     "prepare": "husky install"
   },
