--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "@babel/core": "^7.13.16",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
-    "@storybook/addon-actions": "^6.2.8",
-    "@storybook/addon-essentials": "^6.2.8",
-    "@storybook/addon-links": "^6.2.8",
-    "@storybook/addon-storysource": "^6.2.9",
-    "@storybook/react": "^6.2.8",
+    "@storybook/addon-actions": "^6.3.0-alpha.22",
+    "@storybook/addon-essentials": "^6.3.0-alpha.22",
+    "@storybook/addon-links": "^6.3.0-alpha.22",
+    "@storybook/addon-storysource": "^6.3.0-alpha.22",
+    "@storybook/react": "^6.3.0-alpha.22",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.23",
