build(repo): adjust lerna version and publish scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Monorepo for base library. Used for testing and experimentation.",
   "main": "index.js",
   "scripts": {
-    "init": "npm run bootstrap && npm run build",
+    "postinstall": "npm run bootstrap && npm run build || exit 1",
     "build": "lerna run build",
     "test": "jest --coverage",
     "test:ci": "npm run test -- --maxWorkers=4",
@@ -16,10 +16,12 @@
     "format": "prettier --write \"./packages/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "deploy": "npm run build-storybook && gh-pages -d storybook-static",
     "bootstrap": "lerna bootstrap --hoist",
-    "prepublish": "npm run init",
-    "publish": "lerna publish",
-    "postpublish": "lerna publish from-package --yes || exit 0",
-    "publish:ci": "npm run publish -- --yes",
+    "prepublish": "npm run postinstall && lerna version",
+    "publish": "lerna publish from-git",
+    "postpublish": "lerna publish from-package",
+    "prepublish:ci": "npm run postinstall && lerna version --yes",
+    "publish:ci": "lerna publish from-git --yes",
+    "postpublish:ci": "lerna publish from-package --yes",
     "prepare": "husky install"
   },
   "keywords": [],
